--- a/app/views/visits/_visit.html.erb
+++ b/app/views/visits/_visit.html.erb
@@ -1,4 +1,6 @@
 <tr>
+  <td><%= visit.entity %></td>
+  <td><%= visit.location %></td>
   <td><%= visit.ip %></td>
   <td><%= visit.created_at %></td>
   <td><%= link_to 'Destroy Visit', [visit.link, visit],
