--- a/app/views/links/_form.html.erb
+++ b/app/views/links/_form.html.erb
@@ -1,31 +1,9 @@
-<%= form_for @link do |f| %>
- 
-  <% if @link.errors.any? %>
-    <div id="error_explanation">
-      <h2>
-        <%= pluralize(@link.errors.count, "error") %> prohibited
-        this link from being saved:
-      </h2>
-      <ul>
-        <% @link.errors.full_messages.each do |msg| %>
-          <li><%= msg %></li>
-        <% end %>
-      </ul>
-    </div>
-  <% end %>
- 
-  <p>
-    <%= f.label :url %><br>
-    <%= f.text_field :url %>
-  </p>
- 
-  <p>
-    <%= f.label :slug %><br>
-    <%= f.text_field :slug %>
-  </p>
- 
-  <p>
-    <%= f.submit %>
-  </p>
- 
+<%= simple_form_for @link, html: { class: 'form-horizontal' },
+  wrapper: :horizontal_form do |f| %>
+    <%= f.error_notification %>
+
+    <%= f.input :url, placeholder: 'Enter URL', as: :string %>
+    <%= f.input :slug, placeholder: 'Enter Slug', as: :string %>
+
+    <%= f.button :submit, class: 'btn-primary btn-xl' %>
 <% end %>
